--- a/RuSpeak/RuSpeak.csproj
+++ b/RuSpeak/RuSpeak.csproj
@@ -258,6 +258,8 @@
     <Content Include="Views\Post\Edit.cshtml" />
     <Content Include="Views\Post\CreatePiece.cshtml" />
     <Content Include="Views\Post\ShowPost.cshtml" />
+    <Content Include="Views\Post\EditPiece.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -292,11 +294,14 @@
     <Compile Include="App_Start\PreStartApp.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="DAL\Abstract\ICommentRepository.cs" />
     <Compile Include="DAL\Abstract\IPostRepository.cs" />
     <Compile Include="DAL\Abstract\IUserRepository.cs" />
+    <Compile Include="DAL\Concrete\CommentRepository.cs" />
     <Compile Include="DAL\Concrete\PostRepository.cs" />
     <Compile Include="DAL\Concrete\UserRepository.cs" />
     <Compile Include="Global.asax.cs">
@@ -325,6 +330,10 @@
     <Compile Include="Migrations\201409271212056_3.cs" />
     <Compile Include="Migrations\201409271212056_3.Designer.cs">
       <DependentUpon>201409271212056_3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201410011218333_addUser_toComment.cs" />
+    <Compile Include="Migrations\201410011218333_addUser_toComment.Designer.cs">
+      <DependentUpon>201410011218333_addUser_toComment.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Auth\Role.cs" />
@@ -370,6 +379,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201409271212056_3.resx">
       <DependentUpon>201409271212056_3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410011218333_addUser_toComment.resx">
+      <DependentUpon>201410011218333_addUser_toComment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
